# migration-evals

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  fpr4qshms4rqfrogigdjipsvuccc8jt5  gk4odsblcdkdgulebsp7bsqum7vnickv.darc  manifest  pyproject.toml  u2lccdebirtisjvvjuvbto2cv9kallel.darc
.beads/: config.yaml  issues.jsonl  metadata.json
.gc/: project-brief.md  settings.json
.github/: CODEOWNERS
architecture/: README.md  deployment.c4  model.c4  spec.c4  views.c4
configs/: java8_17_claude_code.yaml  java8_17_dual_family.yaml  java8_17_smoke.yaml  oracle_spec.yaml
data/: README.md  agent_changesets.csv
docs/: PRD.md  README.md  agentic_migrations_coverage.md  calibration_starters.md  eval_node_handoff.md  failure_classification.md  gold_anchor.md  harness_synthesis.md  hypotheses_and_thresholds.md  integration_guide.md  oracle_funnel.md  premortem.md  publication_gate.md  python23_probe.md  python23_probe_findings.md  sandbox_outer_daemon.md  sandbox_policy.md  synthetic_generator.md  tier0_skip.md  tier1_skip.md  usage.md
schemas/: gold_anchor_entry.schema.json  mig_result.schema.json
scripts/: calibrate.py  judge_calibrate.py  mine_gold_anchor.py  pull_changesets.py  run_eval.py
tests/: _calibrate_stub_sandbox.py  conftest.py  test_adapters_anthropic.py  test_adapters_claude_code.py  test_adapters_docker.py  test_adapters_judge.py  test_adapters_openai.py  test_ast_oracle.py  test_calibrate_script.py  test_calibration.py  test_changesets.py  test_cli_runner.py  test_contamination.py  test_cost_utils.py  test_failure_class.py  test_funnel.py  test_gold_anchor.py  test_harness.py  test_iterator_report.py  test_judge_calibration.py  test_ledger.py  test_mine_gold_anchor.py  (+15 more)
(+382 files in other folders)
